[gd_scene load_steps=15 format=2]

[ext_resource path="res://World/0x72_16x16DungeonTileset.v4.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Effects/Focus.png" type="Texture" id=6]
[ext_resource path="res://Effects/ShieldIcon.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 15.5

[sub_resource type="CircleShape2D" id=2]
radius = 26.5189

[sub_resource type="CircleShape2D" id=3]
radius = 46.5027

[sub_resource type="CircleShape2D" id=4]
radius = 25.0

[sub_resource type="Animation" id=7]
resource_name = "Die"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -15.0, 0.0, 15.0 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"persist",
"player",
]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="ShieldIcon" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, -53 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 128.033, 240.77, 16.3538, 16.4609 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
input_pickable = false
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 5

[node name="MoveRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveRadius"]
visible = false
shape = SubResource( 3 )

[node name="AttackIndicator" type="Sprite" parent="."]
position = Vector2( -28.5, -28.5 )
scale = Vector2( 0.109375, 0.109375 )
texture = ExtResource( 6 )

[node name="Hitbox" parent="AttackIndicator" instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, 4.57144 )
scale = Vector2( 9.14286, 9.14286 )
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" parent="AttackIndicator/Hitbox" index="0"]
shape = SubResource( 4 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -19.5
margin_top = 18.5
margin_right = 20.5
margin_bottom = 32.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 7 )
anims/Idle = SubResource( 5 )
anims/Walk = SubResource( 6 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="health_changed" from="Stats" to="." method="_on_Stats_health_changed"]
[connection signal="input_event" from="MoveRadius" to="." method="_on_MoveRadius_input_event"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Hurtbox"]

[editable path="AttackIndicator/Hitbox"]
